feat: configuration du nom et prénom

--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,6 @@
                 </td>
             </tr>
         </table>
-        <script type="text/javascript">
-            require('./renderer.js');
-        </script>
+        <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
