feat(css): ajout de foundation + foundation datepicker

--- a/app/index.html
+++ b/app/index.html
@@ -4,51 +4,78 @@
         <title>Mon absence</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+        <link rel="stylesheet" href="components/foundation-sites/dist/foundation.min.css" />
+        <link rel="stylesheet" href="components/foundation-datepicker/css/foundation-datepicker.min.css" />
     </head>
     <body>
-        <table id="form">
-            <tr>
-                <th>Nom :</th>
-                <td><input type="text" name="nom"/></td>
-            </tr>
-            <tr>
-                <th>Prénom :</th>
-                <td><input type="text" name="prenom"/></td>
-            </tr>
-            <tr>
-                <th>Date de début :</th>
-                <td><input type="text" name="date_debut"/></td>
-            </tr>
-            <tr>
-                <th>Date de fin :</th>
-                <td><input type="text" name="date_fin"/></td>
-            </tr>
-            <tr>
-                <th>Type :</th>
-                <td>
-                    <ul>
-                        <li>
-                            <label>
-                                <input type="radio" name="type" value="CP" checked/>
-                                Congés payés
-                            </label>
-                        </li>
-                        <li>
-                            <label>
-                                <input type="radio" name="type" value="RTT"/>
-                                RTT
-                            </label>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <button id="save">Générer</button>
-                </td>
-            </tr>
-        </table>
+        <div class="container">
+            <h1 class="text-center">Demande d'absence</h1>
+            <div class="row">
+                <div class="small-12 columns">
+                    <div class="row">
+                        <div class="small-3 columns">
+                            <label for="form-nom" class="right inline">Nom :</label>
+                        </div>
+                        <div class="small-9 columns">
+                            <input type="text" id="form-nom" name="nom" placeholder="Nom ...">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="small-3 columns">
+                            <label for="form-prenom" class="right inline">Prénom :</label>
+                        </div>
+                        <div class="small-9 columns">
+                            <input type="text" id="form-prenom" name="prenom" placeholder="Prénom ...">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="small-3 columns">
+                            <label for="form-date_debut" class="right inline">Date de début :</label>
+                        </div>
+                        <div class="small-9 columns">
+                            <input type="text" id="form-date_debut" class="fdatepicker" name="date_debut" placeholder="Date de début ...">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="small-3 columns">
+                            <label for="form-date_fin" class="right inline">Date de fin :</label>
+                        </div>
+                        <div class="small-9 columns">
+                            <input type="text" id="form-date_fin" class="fdatepicker" name="date_fin" placeholder="Date de fin ...">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="large-6 columns">
+                            <label>Type :</label>
+                            <input type="radio" name="type" value="CP" id="type-cp">
+                            <label for="type-cp">Congés payés</label>
+                            <input type="radio" name="type" value="RTT" id="type-rtt">
+                            <label for="type-rtt">RTT</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="large-6 columns">
+                            <div class="text-center">
+                                <button id="save" class="button">Générer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            var jQuery = require("jquery"); 
+        </script>
+        <script type="text/javascript" src="components/foundation-sites/dist/foundation.min.js"></script>
+        <script type="text/javascript" src="components/foundation-datepicker/js/foundation-datepicker.min.js"></script>
+        <script type="text/javascript" src="components/foundation-datepicker/js/locales/foundation-datepicker.fr.js"></script>
+        <script>
+            jQuery(document).foundation();
+            
+            jQuery('.fdatepicker').fdatepicker({
+                language: 'fr'
+            });
+        </script>
         <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
