--- a/app/profil.html
+++ b/app/profil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mon absence</title>
+        <title>TRSb - Demande d'absence</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="components/foundation-sites/dist/foundation.min.css" />
