chore: bouton radio "CP" checked par defaut

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
                     <div class="row">
                         <div class="large-6 columns">
                             <label>Type :</label>
-                            <input type="radio" name="type" value="CP" id="type-cp">
+                            <input type="radio" name="type" value="CP" id="type-cp" checked>
                             <label for="type-cp">Congés payés</label>
                             <input type="radio" name="type" value="RTT" id="type-rtt">
                             <label for="type-rtt">RTT</label>
