feat: sauvegarde de la signature

--- a/app/profil.html
+++ b/app/profil.html
@@ -28,6 +28,15 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="small-3 columns">
+                            <button id="signature" class="button">Signature</button>
+                            <input type="hidden" id="form-signature" name="signature">
+                        </div>
+                        <div class="small-9 columns">
+                            <div id="signature_visuel"></div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="large-6 columns">
                             <div class="text-center">
                                 <button id="save" class="button">Enregistrer</button>
