--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
                     <div class="row">
                         <div class="large-6 columns">
                             <div class="text-center">
+                                <input type="hidden" id="form-signature" name="signature">
                                 <button id="save" class="button">Générer</button>
                             </div>
                         </div>
