chore: revision foundation

--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,12 @@
         <title>TRSb - Demande d'absence</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="components/foundation-sites/dist/foundation.min.css" />
+        <link rel="stylesheet" href="components/foundation-sites/dist/css/foundation.min.css" />
         <link rel="stylesheet" href="components/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" href="components/foundation-datepicker/css/foundation-datepicker.min.css" />
     </head>
     <body>
-        <div class="container">
+        <div class="grid-container">
             <h1 class="text-center">Demande d'absence</h1>
             <div class="row">
                 <div class="small-12 columns">
@@ -97,7 +97,7 @@
         <script type="text/javascript">
             var jQuery = require("jquery"); 
         </script>
-        <script type="text/javascript" src="components/foundation-sites/dist/foundation.min.js"></script>
+        <script type="text/javascript" src="components/foundation-sites/dist/js/foundation.min.js"></script>
         <script type="text/javascript" src="components/foundation-datepicker/js/foundation-datepicker.min.js"></script>
         <script type="text/javascript" src="components/foundation-datepicker/js/locales/foundation-datepicker.fr.js"></script>
         <script>
