--- a/app/profil.html
+++ b/app/profil.html
@@ -4,10 +4,10 @@
         <title>TRSb - Demande d'absence</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="components/foundation-sites/dist/foundation.min.css" />
+        <link rel="stylesheet" href="components/foundation-sites/dist/css/foundation.min.css" />
     </head>
     <body>
-        <div class="container">
+        <div class="grid-container">
             <h1 class="text-center">Demande d'absence</h1>
             <div class="row">
                 <div class="small-12 columns">
@@ -49,7 +49,7 @@
         <script type="text/javascript">
             var jQuery = require("jquery"); 
         </script>
-        <script type="text/javascript" src="components/foundation-sites/dist/foundation.min.js"></script>
+        <script type="text/javascript" src="components/foundation-sites/dist/js/foundation.min.js"></script>
         <script>
             jQuery(document).foundation();
         </script>
