feat(cadre): Ajout de la possibilité de choisir un template cadre

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,11 @@
                     </div>
                     <div class="row">
                         <div class="small-3 columns">
+                            <label for="form-cadre" class="right inline">Cadre :</label> <input type="checkbox" id="form-cadre" name="cadre">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="small-3 columns">
                             <label for="form-date_debut" class="right inline">Date de début :</label>
                         </div>
                         <div class="small-9 columns">
