--- a/app/profil.html
+++ b/app/profil.html
@@ -29,6 +29,11 @@
                     </div>
                     <div class="row">
                         <div class="small-3 columns">
+                            <label for="form-cadre" class="right inline">Cadre :</label> <input type="checkbox" id="form-cadre" name="cadre">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="small-3 columns">
                             <button id="signature" class="button">Signature</button>
                             <input type="hidden" id="form-signature" name="signature">
                         </div>
